// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Controller - Create should throw validation error when property name is 1 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "name must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`User Controller - Create should throw validation error when property password is 1 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "password must be longer than or equal to 8 characters",
    "password must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`User Controller - Create should throw validation error when property password is short 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    "password must be longer than or equal to 8 characters",
  ],
  "statusCode": 400,
}
`;
